examples/test/testpolicy5391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5391
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key18: value26
      key28: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value49
          key4: value21
      podSelector:
        matchLabels:
          key46: value6
